--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+battle_showdown_challenge/node_modules
 
 # next.js
-/.next/
+battle_showdown_challenge/.next/
 
 # misc
 .DS_Store
